--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
           about: "About The App",
           featuresTitle: "App Features",
           f1: "• Easy and fast audio player app.",
-          f2: "• Includes multiple themes to suit your taste.",
+          f2: "• Includes multiple themes.",
           f3: "• Quickly and easily search for audio files.",
           f4: "• Add audio files to your favorites list.",
           f5: "• The app contains no annoying ads.",
-          f6: "• And many other features for you to explore.",
+          f6: "• And many other features.",
           infoTitle: "App Information",
           i1: "• Version: 1.0",
           i2: "• Last Update: 1/10/2025",
@@ -99,9 +99,9 @@
           f1: "• تطبيق سهل و سريع لتشغيل الملفات الصوتية.",
           f2: "• يحتوي على ثيمات متعددة لتناسب ذوقك.",
           f3: "• يمكنك البحث عن الملفات الصوتية بسرعة وسهولة.",
-          f4: "• يمكنك إضافة الملفات الصوتية إلى قائمة المفضلة لديك.",
+          f4: "• إضافة الملفات الصوتية إلى قائمة المفضلة لديك.",
           f5: "• التطبيق لا يحتوي على أي إعلانات مزعجة.",
-          f6: "• ويحتوي على الكثير من المميزات الأخرى استكشفها بنفسك.",
+          f6: "• ويحتوي على الكثير من المميزات الأخرى.",
           infoTitle: "معلومات البرنامج",
           i1: "• الاصدار : 1.0",
           i2: "• تاريخ التحديث : 1/10/2025",
@@ -151,4 +151,4 @@
     });
   </script>
 </body>
-</html>
+  </html>
